# book-metasoup

./: README.md  pyproject.toml  setup.py
meta/: book.py  calibre.py  client.py  cmd.py  douban.py  identifier.py  movie.py  music.py  source.py
metasoup/: douban.py  test.py
