[tool.poetry]
name = "meta"
version = "0.0.1"
description = "Get book/movie/music metadata"
authors = ["Jianwei Han <hanjianwei@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
